--- a/quiz_game.css
+++ b/quiz_game.css
@@ -40,3 +40,36 @@
           border-width: 2px;
           float: none;
       }
+
+      
+      .btn-grad1 {background-image: linear-gradient(to right, #314755 0%, #26a0da  51%, #314755  100%)}
+      .btn-grad1 {
+         margin: 10px;
+         padding: 15px 45px;
+         text-align: center;
+         text-transform: uppercase;
+         transition: 0.5s;
+         background-size: 200% auto;
+         color: white;            
+         box-shadow: 0 0 20px #eee;
+         border-radius: 10px;
+         display: block;
+       }
+
+       .btn-grad1:hover {
+         background-position: right center; /* change the direction of the change here */
+         color: #fff;
+         text-decoration: none;
+       }
+
+       #output {
+        background:  white;
+        border-radius: 10px;
+        border-top: 10px solid blue;
+        padding: 10px;
+        float: none;
+       }
+
+       #quiz_game_page {
+        background: linear-gradient(90deg, rgba(0,190,255,1) 0%, rgba(41,152,233,1) 8%, rgba(61,180,222,1) 12%, rgba(48,144,220,1) 21%, rgba(38,170,218,1) 28%, rgba(31,153,216,1) 34%, rgba(23,162,214,1) 40%, rgba(22,134,211,1) 42%, rgba(20,152,210,1) 49%, rgba(17,121,208,1) 57%, rgba(13,164,224,1) 67%, rgba(19,183,226,1) 75%, rgba(22,143,227,1) 79%, rgba(26,180,228,1) 84%, rgba(33,80,230,1) 93%, rgba(25,64,228,1) 100%);
+       }
