--- a/quiz_game.css
+++ b/quiz_game.css
@@ -20,7 +20,6 @@
           }
       body{
           font-family: Comic Sans MS;
-          text-align: center;
       }
           
       .login_div1{
@@ -72,4 +71,9 @@
 
        #quiz_game_page {
         background: linear-gradient(90deg, rgba(0,190,255,1) 0%, rgba(41,152,233,1) 8%, rgba(61,180,222,1) 12%, rgba(48,144,220,1) 21%, rgba(38,170,218,1) 28%, rgba(31,153,216,1) 34%, rgba(23,162,214,1) 40%, rgba(22,134,211,1) 42%, rgba(20,152,210,1) 49%, rgba(17,121,208,1) 57%, rgba(13,164,224,1) 67%, rgba(19,183,226,1) 75%, rgba(22,143,227,1) 79%, rgba(26,180,228,1) 84%, rgba(33,80,230,1) 93%, rgba(25,64,228,1) 100%);
+       }
+
+       .header {
+         text-align: center;
+         float: none;
        }
